Fixes for shadow mode release